--- a/django_project/quiz/templates/period/graph1.html
+++ b/django_project/quiz/templates/period/graph1.html
@@ -5,8 +5,8 @@
         <img src = "{%static '/images/graph/foo.png'%}" alt="엥?" align="top">
     </div>
     <script>
-        content_from_django = '{{contents}}'
-        const contents_string = '{{contents}}'.replace(/#x27;/gi, "").replace(/amp;/gi, "").replace(/&/gi, "\"");
+        content_from_django = '{{time_options}}'
+        const contents_string = '{{time_options}}'.replace(/#x27;/gi, "").replace(/amp;/gi, "").replace(/&/gi, "\"");
         const contents = JSON.parse(contents_string);
         F = document.createElement('form');
         F.action = "{%url 'result'%}";
@@ -31,7 +31,7 @@
         H.value = '{{category}}'
         H2 = document.createElement('input');
         H2.type = 'hidden';
-        H2.name = 'contents';
+        H2.name = 'time_options';
         H2.value = content_from_django;
         F.appendChild(S);
         F.appendChild(H);
