--- a/django_project/quiz/templates/period/graph1.html
+++ b/django_project/quiz/templates/period/graph1.html
@@ -2,7 +2,7 @@
 {%load static%}
 {%block content%}
     <div>
-        <img src = "{%static '/images/graph/foo.png'%}" alt="엥?" align="top">
+        <img src = "{%static '/images/graph/goo.png'%}" alt="엥?" align="top">
     </div>
     <script>
         content_from_django = '{{time_options}}'
