--- a/django_project/quiz/templates/base.html
+++ b/django_project/quiz/templates/base.html
@@ -23,7 +23,9 @@
          <a href="http://127.0.0.1:8000/"> 메인 페이지 <br></a>
          <a href="http://127.0.0.1:8000/cards"> 카드 목록 <br></a>
          <a href="http://127.0.0.1:8000/visitors"> 시간대별 접속자 <br></a>
-         <a href="http://127.0.0.1:8000/search"> 시간대별 검색 키워드 <br></a>
+         <a href="http://127.0.0.1:8000/search"> 인기 검색어 <br></a>
+         <a href="http://127.0.0.1:8000/download"> 인기 다운로드 <br></a>
+         <a href="http://127.0.0.1:8000/make"> 일별 제작 시간 추이 <br></a>
      </div>
         {% block html %}
         {% endblock %}
