--- a/django_project/quiz/templates/download/download.html
+++ b/django_project/quiz/templates/download/download.html
@@ -1,6 +1,6 @@
 {%extends 'base.html'%}
 {%block html%}
-    <form id="set_period" name="set_period" method="get" action="{%url 'search'%}">
+    <form id="set_period" name="set_period" method="get" action="{%url 'download'%}">
         <fieldset style = "width:890">
             <legend>입력</legend>
             {{form}}
