--- a/django_project/quiz/templates/make/make.html
+++ b/django_project/quiz/templates/make/make.html
@@ -1,12 +1,12 @@
 {%extends 'base.html'%}
 {%block html%}
-    <form id="set_period" name="set_period" method="get" action="{%url 'search'%}">
+    <form id="set_period" name="set_period" method="get" action="{%url 'make'%}">
         <fieldset style = "width:890">
             <legend>입력</legend>
-            {{form}}
+                {{form}}
             <input type="submit" value="검색" style="width:5%;">
         </fieldset>
     </form>
     {%block content%}
-    {%endblock content%}
+    {%endblock%}
 {%endblock html%}
