Debug format err in html : width:800 -> width:800px

--- a/django_project/quiz/templates/search_admin/card_retrieved.html
+++ b/django_project/quiz/templates/search_admin/card_retrieved.html
@@ -3,7 +3,7 @@
 
 <div class="panel panel-primary" style="float:left;margin:10px;">
     <div class="panel panel-heading">"{{ card.user_name }} - {{ card.title }}"의 하위 퀴즈 목록</div>
-	<table class="table" style="width:800">
+	<table class="table" style="width:800px">
 		<th>퀴즈</th>
 		<th>답</th>
 		{% for quiz in quizzes %}
