--- a/django_project/quiz/templates/visitors/visitors.html
+++ b/django_project/quiz/templates/visitors/visitors.html
@@ -92,7 +92,7 @@ function innertHtmlSelect(val){
 }
 </script>
 
-<div class="panel panel-primary" style="float:left;margin:10px;width:150">
+<div class="panel panel-primary" style="float:left;margin:10px;width:150px">
         <div class="panel panel-heading" style="" >접속자 수</div>
             <div class="panel panel-default" style="float:left;margin:10px"></div>
                 <select id="scale" name="scale" onChange="innertHtmlSelect(this.value);" >
